fix z-index bug on fullscreen

--- a/css/main.scss
+++ b/css/main.scss
@@ -150,6 +150,8 @@ canvas {
 
   max-height: 100vh !important;
   height: 100vh !important;
+
+  z-index: 1010 !important;
 }
 
 @import "card";
